<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@drawable/bg_white">

    <RelativeLayout
        android:id="@+id/toplyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/loginrlyst1"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginwithfullname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/textcolor"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeColor="@color/textcolor"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/textcolor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtFullname"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:background="@drawable/bg_edit"
                            android:textSize="13dp"
                            android:textStyle="bold"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/loginrlyst2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:backgroundTint="@color/white"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginwithEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/textcolor"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeColor="@color/textcolor"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/textcolor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textPersonName|textEmailAddress"
                            android:textColor="@color/textcolor"
                            android:background="@drawable/bg_edit"
                            android:textSize="13dp"
                            android:textStyle="bold"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/loginphonelyt3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15sp"

                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="70dp"
                            android:layout_height="47dp"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/spinner_bg">


                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                card_view:ignore="MissingClass">


                            </com.toptoche.searchablespinnerlibrary.SearchableSpinner>




                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/loginwithPhone"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/phonenumber"
                            android:textColorHint="@color/textcolor"
                            app:boxBackgroundMode="outline"
                            app:boxCornerRadiusBottomEnd="5dp"
                            app:boxCornerRadiusBottomStart="5dp"
                            app:boxCornerRadiusTopEnd="5dp"
                            app:boxCornerRadiusTopStart="5dp"
                            app:boxStrokeColor="@color/textcolor"
                            app:helperTextEnabled="true"
                            app:hintTextColor="@color/textcolor">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/bg_edit"
                                android:inputType="textPersonName|textEmailAddress"
                                android:textColor="@color/textcolor"
                                android:textSize="13dp"
                                android:textStyle="bold" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/loginrlyst4"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="false">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPass"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"

                        android:textColorHint="@color/textcolor"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/textcolor"

                        app:endIconMode="password_toggle"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/textcolor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:background="@drawable/bg_edit"
                            android:inputType="textPassword"
                            android:textColor="@color/textcolor"
                            android:textStyle="bold"   />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/white"

                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardCornerRadius="11dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="false">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="10dp"

                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/signup"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>



            </LinearLayout>


        </ScrollView>


    </RelativeLayout>

</RelativeLayout>